# Agent1

./: .env.example  .gitignore  .implement_cache.json  .protected  Architecture.md  README.md  agent - Kopi.py  agent.py  benchmark.py  config.py  config.yaml  entities.md  entities.py  exceptions.py  logging_config.py  output.md  path_utils.py  plan.md  project.md  project_analysis.md  project_entities.md  project_plan.md  project_tasks.md  pyproject.toml  run_tutorial.py  taskplan.md  tool_router.py
.github/workflows/: ci.yml
agent_core/: __init__.py  context_management.py  entities.py  logging_config.py  path_utils.py
checkpoints/: Alice_checkpoint.json  Holger_checkpoint.json
reports/: benchmark_20260718_165806.json
src/: __init__.py  agent_final.py  agent_v1_basic.py  agent_v2_tools.py  agent_v3_memory.py  agent_v4_reasoning.py  entities.py  mock_llm.py  types.py
tests/: __init__.py  conftest.py  test_agent_tutorial.py  test_context_management.py  test_logging_config.py  test_path_utils.py
