[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tutorial"
version = "0.1.0"
description = "A progressive, beginner-friendly tutorial for building AI agents in Python."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.1.0",
]

[project.scripts]
run-tutorial = "run_tutorial:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false