[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tutorial"
version = "0.1.0"
description = "A progressive tutorial for building LLM agents from scratch."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
agent-tutorial = "run_tutorial:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
exclude = ["notebooks/", "run_tutorial\\.py$"]